--- a/index.html
+++ b/index.html
@@ -16,107 +16,128 @@ button{padding:12px 20px;border:none;border-radius:20px;background:#fdd835;font-
 .answers button{background:#1e88e5;color:#fff;margin-top:8px;width:100%}
 </style>
 </head>
+
 <body>
 <div id="app">
 <header>
 <div>ESPACE pour sauter</div>
 <div id="hud">Score : 0 | Niveau : 1</div>
 </header>
+
 <div id="wrapper">
 <canvas id="game" width="900" height="420"></canvas>
-<div class="overlay" id="start">
-<div class="card">
-<h2>Parcours Pro – Mission Locale</h2>
-<p>Clique sur démarrer puis saute avec ESPACE</p>
-<button id="startBtn">Démarrer</button>
-</div>
-</div>
-<div class="overlay" id="quiz" style="display:none">
-<div class="card">
-<h3 id="q"></h3>
-<div class="answers" id="a"></div>
-</div>
-</div>
-</div>
-</div>
-<script>
-const canvas=document.getElementById('game');
-const ctx=canvas.getContext('2d');
 
-let running=false,score=0,level=1,speed=4;
+<div class="overlay" id="start">
+  <div class="card">
+    <h2>Parcours Pro – Mission Locale</h2>
+    <p>Clique sur démarrer puis saute avec ESPACE</p>
+    <button id="startBtn">Démarrer</button>
+  </div>
+</div>
+
+<div class="overlay" id="quiz" style="display:none">
+  <div class="card">
+    <h3 id="q"></h3>
+    <div class="answers" id="a"></div>
+  </div>
+</div>
+</div>
+</div>
+
+<script>
+const canvas = document.getElementById('game');
+const ctx = canvas.getContext('2d');
+
+let running=false, score=0, level=1, speed=4;
 const player={x:100,y:340,r:22,vy:0};
 let obstacles=[];
 
-const questions=[
-[
-  { q:"Que faut-il absolument mettre en haut d'un CV ?", a:["Nom et contact","Recette de cuisine","Photo uniquement"], correct:0, points:50 },
-  { q:"Quelle durée idéale pour un CV ciblé ?", a:["1 page","5 pages","10 pages"], correct:0, points:40 },
-  { q:"Que signifie \"soft skill\" ?", a:["Compétence comportementale","Logiciel","Diplôme"], correct:0, points:30 },
-  { q:"Que faire après une candidature ?", a:["Relancer poliment","Ne rien faire","Envoyer tous les jours"], correct:0, points:30 },
-  { q:"En entretien, comment commencer ?", a:["Bonjour + présentation brève","Raconter sa vie privée","Faire un sketch"], correct:0, points:40 },
-  { q:"Quelle est une bonne qualité professionnelle ?", a:["Ponctualité","Arriver en retard","Manque de respect"], correct:0, points:30 },
-  { q:"Comment adapter son CV à une offre ?", a:["Mettre en avant les compétences demandées","Envoyer le même CV","Changer juste la police"], correct:0, points:35 },
-  { q:"Qu'est-ce qu'une lettre de motivation ?", a:["Un texte adapté à l'offre","Un CV plus long","Une liste de notes personnelles"], correct:0, points:25 },
-  { q:"Où trouver des offres ?", a:["Sites d'emploi","Sur la Lune"], correct:0, points:20 },
-  { q:"Quel comportement éviter en entretien ?", a:["Regarder son téléphone","Écouter le recruteur","Demander des précisions"], correct:0, points:30 }]
+const questions = [
+  { q:"Que faut-il absolument mettre en haut d'un CV ?", a:["Nom et contact","Recette de cuisine","Photo uniquement"], correct:0 },
+  { q:"Quelle durée idéale pour un CV ciblé ?", a:["1 page","5 pages","10 pages"], correct:0 },
+  { q:"Que signifie \"soft skill\" ?", a:["Compétence comportementale","Logiciel","Diplôme"], correct:0 },
+  { q:"Que faire après une candidature ?", a:["Relancer poliment","Ne rien faire","Envoyer tous les jours"], correct:0 },
+  { q:"En entretien, comment commencer ?", a:["Bonjour + présentation brève","Raconter sa vie privée","Faire un sketch"], correct:0 }
+];
 
 function startGame(){
-document.getElementById('start').style.display='none';
-running=true;
-requestAnimationFrame(loop);
+  document.getElementById('start').style.display='none';
+  running=true;
+  requestAnimationFrame(loop);
 }
 
 function loop(){
-if(!running)return;
-ctx.clearRect(0,0,900,420);
+  if(!running) return;
+  ctx.clearRect(0,0,900,420);
 
-// sol
-ctx.fillStyle='#e0e6ef';ctx.fillRect(0,380,900,40);
+  ctx.fillStyle='#e0e6ef';
+  ctx.fillRect(0,380,900,40);
 
-// joueur
-player.vy+=0.8;player.y+=player.vy;
-if(player.y>340){player.y=340;player.vy=0}
-ctx.beginPath();ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
-ctx.fillStyle='#ffb74d';ctx.fill();ctx.strokeStyle='#1e88e5';ctx.lineWidth=4;ctx.stroke();
-ctx.fillStyle='#000';ctx.textAlign='center';ctx.fillText('MLE',player.x,player.y+4);
+  player.vy+=0.8;
+  player.y+=player.vy;
+  if(player.y>340){player.y=340;player.vy=0}
 
-// obstacles
-obstacles.forEach(o=>{
-o.x-=speed;
-ctx.fillStyle=o.air?'#e53935':'#fdd835';
-ctx.fillRect(o.x,o.y,o.w,o.h);
-if(o.x<player.x+player.r&&o.x+o.w>player.x-player.r&&o.y<player.y+player.r&&o.y+o.h>player.y-player.r){lose();}
-});
-obstacles=obstacles.filter(o=>o.x+o.w>0);
+  ctx.beginPath();
+  ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
+  ctx.fillStyle='#ffb74d';
+  ctx.fill();
+  ctx.strokeStyle='#1e88e5';
+  ctx.lineWidth=4;
+  ctx.stroke();
+  ctx.fillStyle='#000';
+  ctx.textAlign='center';
+  ctx.fillText('MLE',player.x,player.y+4);
 
-if(Math.random()<0.02)addObstacle();
-score++;if(score%500===0){level++;speed+=0.5}
-document.getElementById('hud').innerText=`Score : ${score} | Niveau : ${level}`;
-requestAnimationFrame(loop);
+  obstacles.forEach(o=>{
+    o.x-=speed;
+    ctx.fillStyle=o.air?'#e53935':'#fdd835';
+    ctx.fillRect(o.x,o.y,o.w,o.h);
+    if(o.x<player.x+player.r && o.x+o.w>player.x-player.r &&
+       o.y<player.y+player.r && o.y+o.h>player.y-player.r){
+      lose();
+    }
+  });
+
+  obstacles=obstacles.filter(o=>o.x+o.w>0);
+  if(Math.random()<0.02)addObstacle();
+
+  score++;
+  if(score%500===0){level++;speed+=0.5}
+  document.getElementById('hud').innerText=`Score : ${score} | Niveau : ${level}`;
+
+  requestAnimationFrame(loop);
 }
 
 function addObstacle(){
-const air=level>=3&&Math.random()<0.4;
-obstacles.push({x:900,y:air?200+Math.random()*100:350,w:30,h:air?30:40,air});
+  const air = level>=3 && Math.random()<0.4;
+  obstacles.push({x:900,y:air?200+Math.random()*100:350,w:30,h:air?30:40,air});
 }
 
-function lose(){running=false;showQuiz();}
+function lose(){
+  running=false;
+  showQuiz();
+}
 
 function showQuiz(){
-document.getElementById('quiz').style.display='flex';
-const qu=questions[Math.floor(Math.random()*questions.length)];
-document.getElementById('q').innerText=qu.q;
-const a=document.getElementById('a');a.innerHTML='';
-qu.a.forEach((t,i)=>{const b=document.createElement('button');b.innerText=t;b.onclick=()=>{document.getElementById('quiz').style.display='none';if(i===qu.correct){running=true;requestAnimationFrame(loop)}else{score=0;level=1;speed=4;running=true;requestAnimationFrame(loop)}};a.appendChild(b)});
+  document.getElementById('quiz').style.display='flex';
+  const qu = questions[Math.floor(Math.random()*questions.length)];
+  document.getElementById('q').innerText = qu.q;
+  const a=document.getElementById('a');
+  a.innerHTML='';
+  qu.a.forEach((t,i)=>{
+    const b=document.createElement('button');
+    b.innerText=t;
+    b.onclick=()=>{
+      document.getElementById('quiz').style.display='none';
+      running=true;
+      requestAnimationFrame(loop);
+    };
+    a.appendChild(b);
+  });
 }
 
-document.getElementById('startBtn').addEventListener('click',startGame);
+document.getElementById('startBtn').onclick=startGame;
 window.addEventListener('keydown',e=>{if(e.code==='Space'&&running)player.vy=-14});
 </script>
 </body>
 </html>
-
-</script>
-</body>
-</html>
-
