--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ canvas{display:block;background:#f9fbff}
 #wrapper{position:relative}
 .overlay{position:absolute;inset:0;background:rgba(255,255,255,.95);display:flex;align-items:center;justify-content:center;z-index:10}
 .card{background:#fff;padding:20px;border-radius:12px;max-width:500px;width:100%;text-align:center}
+h1{color:#e53935}
 button{padding:12px 20px;border:none;border-radius:20px;background:#fdd835;font-size:16px;cursor:pointer}
 .answers button{background:#1e88e5;color:#fff;margin-top:8px;width:100%}
 </style>
@@ -41,6 +42,15 @@ button{padding:12px 20px;border:none;border-radius:20px;background:#fdd835;font-
     <div class="answers" id="a"></div>
   </div>
 </div>
+
+<div class="overlay" id="gameover" style="display:none">
+  <div class="card">
+    <h1>GAME OVER</h1>
+    <h2 id="count"></h2>
+    <p>Nouvelle partie en cours…</p>
+  </div>
+</div>
+
 </div>
 </div>
 
@@ -48,28 +58,67 @@ button{padding:12px 20px;border:none;border-radius:20px;background:#fdd835;font-
 const canvas = document.getElementById('game');
 const ctx = canvas.getContext('2d');
 
-let running=false, score=0, level=1, speed=4;
-let questionAsked=false;
-
+let running=false, score=0, level=1, speed=3.5;
 const player={x:100,y:340,r:22,vy:0};
 let obstacles=[];
 
 const questions=[
-{ q:"Que faut-il absolument mettre en haut d'un CV ?", a:["Nom et contact","Recette de cuisine","Photo uniquement"], correct:0 },
-{ q:"Quelle durée idéale pour un CV ciblé ?", a:["1 page","5 pages","10 pages"], correct:0 },
-{ q:"Que signifie soft skill ?", a:["Compétence comportementale","Logiciel","Diplôme"], correct:0 },
-{ q:"Que faire après une candidature ?", a:["Relancer poliment","Ne rien faire","Envoyer tous les jours"], correct:0 },
-{ q:"Comment commencer un entretien ?", a:["Bonjour + présentation brève","Raconter sa vie","Faire un sketch"], correct:0 }
-];
-
+[
+  { q:"Que faut-il absolument mettre en haut d'un CV ?", a:["Nom et contact","Recette de cuisine","Photo uniquement"], correct:0, points:50 },
+  { q:"Quelle durée idéale pour un CV ciblé ?", a:["1 page","5 pages","10 pages"], correct:0, points:40 },
+  { q:"Que signifie \"soft skill\" ?", a:["Compétence comportementale","Logiciel","Diplôme"], correct:0, points:30 },
+  { q:"Que faire après une candidature ?", a:["Relancer poliment","Ne rien faire","Envoyer tous les jours"], correct:0, points:30 },
+  { q:"En entretien, comment commencer ?", a:["Bonjour + présentation brève","Raconter sa vie privée","Faire un sketch"], correct:0, points:40 },
+  { q:"Quelle est une bonne qualité professionnelle ?", a:["Ponctualité","Arriver en retard","Manque de respect"], correct:0, points:30 },
+  { q:"Comment adapter son CV à une offre ?", a:["Mettre en avant les compétences demandées","Envoyer le même CV","Changer juste la police"], correct:0, points:35 },
+  { q:"Qu'est-ce qu'une lettre de motivation ?", a:["Un texte adapté à l'offre","Un CV plus long","Une liste de notes personnelles"], correct:0, points:25 },
+  { q:"Où trouver des offres ?", a:["Sites d'emploi","Sur la Lune"], correct:0, points:20 },
+  { q:"Quel comportement éviter en entretien ?", a:["Regarder son téléphone","Écouter le recruteur","Demander des précisions"], correct:0, points:30 },
+  { q:"Qu'est-ce qu'un \"stage\" ?", a:["Une période d'apprentissage en entreprise","Un travail permanent","Un abonnement"], correct:0, points:20 },
+  { q:"Pourquoi relancer une candidature ?", a:["Montrer son intérêt","Manquer d'organisation","Crier"], correct:0, points:25 },
+  { q:"Comment se présenter ?", a:["Nom + objectif professionnel bref","Raconter un long épisode","Chanter"], correct:0, points:30 },
+  { q:"Qu'est-ce qu'un bon CV ?", a:["Clairement structuré","Brouillon","Sans contact"], correct:0, points:35 },
+  { q:"Quelle information NE doit PAS figurer ?", a:["Informations médicales sensibles","Compétences","Contact"], correct:0, points:30 },
+  { q:"Que signifie \"références\" dans un CV ?", a:["Personnes pouvant témoigner de vous","Des références bibliographiques","Un mystère"], correct:0, points:20 },
+  { q:"Qu'est-ce qu'une compétence transférable ?", a:["Capacité utile dans plusieurs emplois","Un seul logiciel","Un diplôme précis"], correct:0, points:30 },
+  { q:"Que faire si on ne sait pas répondre en entretien ?", a:["Admettre et proposer comment trouver la réponse","Inventer une fausse réponse","Ignorer"], correct:0, points:40 },
+  { q:"Quel ton adopter en entretien ?", a:["Professionnel et cordial","Hautain","Trop familier"], correct:0, points:30 },
+  { q:"Comment montrer sa motivation ?", a:["Par des exemples concrets","Dire \"je suis motivé\" sans preuve","Ne rien faire"], correct:0, points:35 },
+  { q:"Qu'est-ce qu'une lettre d'accompagnement ?", a:["Un texte pour contextualiser le CV","Un CV détourné","Un document inutile"], correct:0, points:25 },
+  { q:"Pourquoi soigner son profil en ligne ?", a:["Les recruteurs regardent souvent","Personne ne regarde","C'est interdit"], correct:0, points:25 },
+  { q:"Citer une soft skill importante ?", a:["Capacité d'écoute","Savoir tout faire","Ignorance"], correct:0, points:20 },
+  { q:"Que faire en cas de retard ?", a:["Prévenir et s'excuser","Rester silencieux","Ignorer"], correct:0, points:20 },
+  { q:"Quelle information est utile pour un recruteur ?", a:["Expériences récentes et pertinentes","Vos secrets","Informations bancaires"], correct:0, points:30 },
+  { q:"Qu'est-ce que la ponctualité ?", a:["Arriver à l'heure","Arriver quand on veut","Partir tôt"], correct:0, points:15 },
+  { q:"Pourquoi personnaliser sa candidature ?", a:["Montrer l'adéquation avec l'offre","Gagner du temps","Faire n'importe quoi"], correct:0, points:25 },
+  { q:"Que faire avec un trou dans le CV ?", a:["Expliquer brièvement en valorisant","Tout cacher","Mentir"], correct:0, points:20 },
+  { q:"Quel document joindre ?", a:["CV + lettre adaptée","Rien","Tout ce qu'on a"], correct:0, points:20 },
+  { q:"Où demander de l'aide ?", a:["Mission Locale / Pôle emploi / réseau","Personne","La rue"], correct:0, points:20 },
+  { q:"Comment se former ?", a:["Par des formations, des MOOC, des stages","Rien","Regarder la télé"], correct:0, points:25 },
+  { q:"Que montre une bonne attitude ?", a:["Curiosité et respect","Arrogance","Indifférence"], correct:0, points:30 },
+  { q:"Pourquoi relire son CV ?", a:["Éviter les fautes et les incohérences","Pour le style fantaisiste","Pour l'oublier"], correct:0, points:20 },
+  { q:"Que signifie \"candidature spontanée\" ?", a:["Envoyer son CV sans offre précise","Attendre une offre","Appeler en criant"], correct:0, points:25 },
+  { q:"Comment préparer un entretien ?", a:["Se renseigner sur l'entreprise","Y aller sans préparation","Ignorer l'entreprise"], correct:0, points:30 },
+  { q:"Quel est l'objectif d'une lettre ?", a:["Montrer l'adéquation avec l'offre","Remplir un espace","Raconter sa vie"], correct:0, points:20 },
+  { q:"Pourquoi valoriser un stage ?", a:["Montrer des compétences réelles","Le cacher","Ne rien dire"], correct:0, points:20 },
+  { q:"Qu'est-ce qu'une alternance ?", a:["Formation en entreprise + école","Vacances prolongées","Un emploi permanent"], correct:0, points:20 },
+  { q:"Que faire après un entretien ?", a:["Remercier et relancer si besoin","Tout oublier","Attendre une semaine sans rien faire"], correct:0, points:20 },
+  { q:"Quel est un bon comportement en équipe ?", a:["Partager l'information","Tout garder pour soi","S'opposer systématiquement"], correct:0, points:30 },
+  { q:"Pourquoi être honnête ?", a:["La confiance facilite l'embauche","On ne sait pas","C'est inutile"], correct:0, points:30 },
+  { q:"Que chercher dans une offre ?", a:["Mots-clés, compétences et missions","Juste le salaire","Rien"], correct:0, points:25 },
+  { q:"Que fait un conseiller Mission Locale ?", a:["Aide, orientation, formations","Rien","Décore des bureaux"], correct:0, points:20 }
+]
 function startGame(){
   document.getElementById('start').style.display='none';
-  score=0; level=1; speed=4;
-  obstacles=[];
-  questionAsked=false;
-  player.y=340; player.vy=0;
+  resetGame();
   running=true;
   requestAnimationFrame(loop);
+}
+
+function resetGame(){
+  score=0; level=1; speed=3.5;
+  obstacles=[];
+  player.y=340; player.vy=0;
 }
 
 function loop(){
@@ -79,7 +128,7 @@ function loop(){
   ctx.fillStyle='#e0e6ef';
   ctx.fillRect(0,380,900,40);
 
-  player.vy+=0.8;
+  player.vy+=0.7;
   player.y+=player.vy;
   if(player.y>340){player.y=340;player.vy=0}
 
@@ -105,34 +154,31 @@ function loop(){
   });
 
   obstacles=obstacles.filter(o=>o.x+o.w>0);
-  if(Math.random()<0.02)addObstacle();
+
+  if(Math.random()<0.03)addObstacle();
 
   score++;
-  if(score%500===0){level++;speed+=0.5}
-  document.getElementById('hud').innerText=`Score : ${score} | Niveau : ${level}`;
+  if(score%600===0){level++;speed+=0.3}
 
+  document.getElementById('hud').innerText=`Score : ${score} | Niveau : ${level}`;
   requestAnimationFrame(loop);
 }
 
 function addObstacle(){
-  const air = level>=3 && Math.random()<0.4;
-  obstacles.push({x:900,y:air?200+Math.random()*120:350,w:30,h:air?30:40,air});
+  const airChance=Math.min(0.55,0.3+level*0.04);
+  const air=Math.random()<airChance;
+  obstacles.push({x:900,y:air?220+Math.random()*120:350,w:30,h:air?26:40,air});
 }
 
 function lose(){
   running=false;
-  if(!questionAsked){
-    questionAsked=true;
-    showQuiz();
-  } else {
-    startCountdown(false);
-  }
+  showQuiz();
 }
 
 function showQuiz(){
   document.getElementById('quiz').style.display='flex';
-  const qu = questions[Math.floor(Math.random()*questions.length)];
-  document.getElementById('q').innerText = qu.q;
+  const qu=questions[Math.floor(Math.random()*questions.length)];
+  document.getElementById('q').innerText=qu.q;
   const a=document.getElementById('a');
   a.innerHTML='';
   qu.a.forEach((t,i)=>{
@@ -140,27 +186,49 @@ function showQuiz(){
     b.innerText=t;
     b.onclick=()=>{
       document.getElementById('quiz').style.display='none';
-      startCountdown(i===qu.correct);
+      if(i===qu.correct){
+        countdownContinue();
+      } else {
+        gameOver();
+      }
     };
     a.appendChild(b);
   });
 }
 
-function startCountdown(good){
-  let count=3;
-  const overlay=document.createElement('div');
-  overlay.className='overlay';
-  overlay.innerHTML=`<div class="card"><h2 id="count">${count}</h2><p>Reprise de la partie…</p></div>`;
-  document.getElementById('wrapper').appendChild(overlay);
+function countdownContinue(){
+  let c=3;
+  const go=document.getElementById('gameover');
+  go.style.display='flex';
+  go.querySelector('h1').innerText='Reprise';
+  const count=document.getElementById('count');
+  count.innerText=c;
 
-  const timer=setInterval(()=>{
-    count--;
-    overlay.querySelector('#count').innerText=count;
-    if(count===0){
-      clearInterval(timer);
-      overlay.remove();
-      if(!good){score=0;level=1;speed=4;obstacles=[];}
-      player.y=340;player.vy=0;
+  const t=setInterval(()=>{
+    c--; count.innerText=c;
+    if(c===0){
+      clearInterval(t);
+      go.style.display='none';
+      running=true;
+      requestAnimationFrame(loop);
+    }
+  },1000);
+}
+
+function gameOver(){
+  let c=3;
+  const go=document.getElementById('gameover');
+  go.style.display='flex';
+  go.querySelector('h1').innerText='GAME OVER';
+  const count=document.getElementById('count');
+  count.innerText=c;
+
+  const t=setInterval(()=>{
+    c--; count.innerText=c;
+    if(c===0){
+      clearInterval(t);
+      go.style.display='none';
+      resetGame();
       running=true;
       requestAnimationFrame(loop);
     }
@@ -169,9 +237,13 @@ function startCountdown(good){
 
 document.getElementById('startBtn').onclick=startGame;
 window.addEventListener('keydown',e=>{
-  if(e.code==='Space' && running) player.vy=-14;
+  if(e.code==='Space' && running) player.vy=-13;
 });
 </script>
 </body>
 </html>
+
+</body>
+</html>
+
 
